--- a/theme/cluny/templates/mails/reservationCLUNY.html
+++ b/theme/cluny/templates/mails/reservationCLUNY.html
@@ -1,6 +1,6 @@
 <!--mail pour la réservation à la pension Saint Joseph de Cluny-->
 <html><body>
-  <h3>Demande de réservation</h3><br/><br/>
+  <h2>Demande de réservation</h2><br/>
   <h3>Identification</h3>
 <table width="80%">
 <tr>
