--- a/theme/cluny/templates/mails/reservationCLUNY.html
+++ b/theme/cluny/templates/mails/reservationCLUNY.html
@@ -26,7 +26,7 @@
       Date prévue de départ : { endDate }
     </td>
   </tr>
-  </table>
+  </table><br/>
 <table style="width:80%">
   <thead>
           <tr>
@@ -38,55 +38,55 @@
       </thead>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Chambre simple</td>
-          <td style="border-bottom:1px solid grey">42 €/nuit</td>
-          <td style="border-bottom:1px solid grey"> { rooms1 }</td>
-          <td style="border-bottom:1px solid grey">50 €/nuit</td>
-          <td style="border-bottom:1px solid grey"> { rooms1_shower }</td>
-          <td style="border-bottom:1px solid grey">{ price1 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">42 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;"> { rooms1 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">50 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;"> { rooms1_shower }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ price1 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey" >
           <td style="border-bottom:1px solid grey">Chambre double (couple)</td>
-          <td style="border-bottom:1px solid grey">72 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ rooms2 }</td>
-          <td style="border-bottom:1px solid grey">88 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ rooms2_shower }</td>
-          <td style="border-bottom:1px solid grey">{ price2 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">72 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ rooms2 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">88 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ rooms2_shower }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ price2 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey" >
           <td style="border-bottom:1px solid grey">Chambre triple</td>
           <td style="border-bottom:1px solid grey"></td>
           <td style="border-bottom:1px solid grey"></td>
-          <td style="border-bottom:1px solid grey">120 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ rooms3_shower }</td>
-          <td style="border-bottom:1px solid grey">{ price3 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">120 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ rooms3_shower }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ price3 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Chambre quadruple</td>
-          <td style="border-bottom:1px solid grey">120 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ rooms4 }</td>
-          <td style="border-bottom:1px solid grey">128 €/nuit</td>
-          <td style="border-bottom:1px solid grey"> { rooms4_shower }</td>
-          <td style="border-bottom:1px solid grey">{ price4 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">120 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ rooms4 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">128 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;"> { rooms4_shower }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ price4 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey">
-          <td style="border-bottom:1px solid grey">Chambres pour les groupes de jeunes</td>
-          <td style="border-bottom:1px solid grey">30 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ rooms5 }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">Chambres pour les groupes de jeunes</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">30 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ rooms5 }</td>
           <td colspan="2" style="border-bottom:1px solid grey; font-style: italic;">Nombre de personnes</td>
           <td style="border-bottom:1px solid grey">{ price5 }</td>
       </tr>
       <tr style="border-bottom:1px solid grey">
           <td style="border-bottom:1px solid grey">Taxe de séjour *</td>
-          <td style="border-bottom:1px solid grey">3,5 €/nuit</td>
-          <td style="border-bottom:1px solid grey">{ nb_adults }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">3,5 €/nuit</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ nb_adults }</td>
           <td colspan="2" style="border-bottom:1px solid grey; font-style: italic;">Nombres de personnes concernées par la taxe</td>
-          <td style="border-bottom:1px solid grey">{ taxe }</td>
+          <td style="border-bottom:1px solid grey; text-align:center;">{ taxe }</td>
       </tr>
   
   </table>
 <p><em>
     * les enfants de moins de 10 ans en sont exempts</p><br/><br/>
-  <p>Commentaires<br/>
+  <p><b>Commentaires</b><br/>
   { remarks }</p>
   <p><b>Total :</b> { total } €<br></p>
   
