--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -1,17 +1,12 @@
-<script async src="/theme/cte/src/modules/rubedoBlocks/controllers/InscriptionController.js"></script>
+<script async src="/theme/foyers/src/modules/rubedoBlocks/controllers/FormulaireController.js"></script>
 
 <div class=" content_border"  itemscope itemtype="http://schema.org/Event">
-  <meta itemprop="image" content="{{'https://www.chemin-neuf.fr' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />
+  <meta itemprop="image" content="{{'https://www.foyersetudiants.org' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />
   <meta itemprop="name" content="{{fieldEntity['text']}}">
   <meta itemprop="startDate" content="{{contentDetailCtrl.content.fields.dateDebut *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
   <meta ng-if="contentDetailCtrl.content.fields.dateFin" itemprop="endDate" content="{{contentDetailCtrl.content.fields.dateFin *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
 	<meta itemprop="description" content="{{contentDetailCtrl.content.fields.summary}}">
-	<span itemprop="location" itemscope itemtype="http://schema.org/Place">
-		<meta itemprop="name" content="{{fieldEntity['positionName']}}">
-		<meta itemprop="address" content="{{contentDetailCtrl.content.fields.position.address}}">
-			
-		</span>
-	  </span>
+
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 ">
@@ -47,121 +42,12 @@
 	</div>
 
 
-	<div class="container-fluid">
-		<div class="row" ng-if="fieldEntity['description']">
-			<div class="col-xs-12 bg-white" >
-				<div class="text-article">
-					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('description')}}"></rubedo-field><!--Description-->
-				</div>
-			</div>		
-		</div>
-		<a name="infos_pratiques"></a>
-		<div class="row" >
-			<div class="text-article infos">
-				<div class="col-xs-12"><h3>{{rubedo.translate("InfosPratiques", "Infos pratiques")}}</h3></div>
-				<div ng-if="fieldEntity['dateDebut'] || fieldEntity['complement_date'] || fieldEntity['dates_cycle']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{rubedo.translate("Date", "Date")}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p ng-if="fieldEntity['dateDebut'] ">
-							<span ng-if="fieldEntity['dateFin'] && fieldEntity['dateFin'] !=fieldEntity['dateDebut'] ">{{rubedo.translate("date.from", "od")}}</span> {{contentDetailCtrl.content.fields.dateDebut* 1000 | date:'fullDate'}}
-							<span ng-if="fieldEntity['heureDebut']">
-								<span ng-if="fieldEntity['dateFin'] !=fieldEntity['dateDebut'] ">{{rubedo.translate("Time.At", "à")}} </span>
-								<span ng-if="fieldEntity['dateFin'] ==fieldEntity['dateDebut'] ">, </span>
-								{{contentDetailCtrl.content.fields.heureDebut|cleanHour}} 
-							</span>
-							<span ng-if="fieldEntity['dateFin'] && fieldEntity['dateFin'] !=fieldEntity['dateDebut'] ">{{rubedo.translate("date.to", "do")}} {{contentDetailCtrl.content.fields.dateFin* 1000 | date:'fullDate'}}
-								<span ng-if="fieldEntity['heureFin']">{{rubedo.translate("Time.At", "à")}} {{contentDetailCtrl.content.fields.heureFin|cleanHour}}</span>
-							</span>
-							<span ng-if="fieldEntity['dateFin'] && fieldEntity['dateFin'] ==fieldEntity['dateDebut'] "> {{rubedo.translate("Time.At", "à")}} {{contentDetailCtrl.content.fields.heureFin|cleanHour}}</span>
-						</p>
-						<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('dateDebut')}}"></rubedo-field>
-						<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('heureDebut')}}"></rubedo-field>
-						<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('dateFin')}}"></rubedo-field>
-						<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('heureFin')}}"></rubedo-field>
-						<rubedo-field ng-if="fieldEntity['complement_date'] " field =  "{{contentDetailCtrl.getFieldByName('complement_date')}}"></rubedo-field>
-						<rubedo-field ng-if="fieldEntity['dates_cycle'] " field =  "{{contentDetailCtrl.getFieldByName('dates_cycle')}}"></rubedo-field>
-					</div>
-				</div>
-
-				<div ng-if="fieldEntity['position']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('lieuCommunautaire')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p ng-if="contentDetailCtrl.content.fields.position.address!='' ">{{contentDetailCtrl.content.fields.position.address}}</p><!--Description-->
-						<rubedo-field  ng-if="contentDetailCtrl.content.fields.position.address=='' " field =  "{{contentDetailCtrl.getFieldByName('positionName')}}"></rubedo-field>
-					</div>
-				</div>
-				<div ng-if="fieldEntity['logement']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('logement')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('logement')}}"></rubedo-field><!--Description-->
-					</div>
-				</div>
-				<div ng-if="fieldEntity['transport']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('transport')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('transport')}}"></rubedo-field><!--Description-->
-					</div>
-				</div>
-				<div ng-if="fieldEntity['accompte']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('accompte')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p>{{contentDetailCtrl.content.fields.accompte}}{{contentDetailCtrl.paymentmeans.nativePMConfig.monnaie}}</p>
-						<rubedo-field  ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('accompte')}}"></rubedo-field><!--Description-->
-					</div>
-				</div>
-				<div ng-if="fieldEntity['paf_text']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('paf_text')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('paf_text')}}" ></rubedo-field><!--Description-->
-						<span class="help-block" style="font-style: italic; margin-top:-20px;">{{rubedo.translate( "Block.Inscription.Paf.Problemes","L'argent ne doit pas être un obstacle, contactez-nous en cas de difficulté")}}</span>
-					</div>
-					
-				</div>
-				<div ng-if="fieldEntity['position'] && contentDetailCtrl.content.fields.position.address!='' " ng-init="showMap=false" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('position')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p ng-click="showMap= !showMap"><a href="" >{{rubedo.translate("Block.Inscription.VoirPlan", "Voir le plan")}}</a></p>
-					</div>
-					<rubedo-field ng-if="showMap" class="col-xs-12"  field =  "{{contentDetailCtrl.getFieldByName('position')}}"></rubedo-field><!--Plan-->
-				</div>
-				<div ng-if="fieldEntity['contact']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('contact')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p><rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('contact')}}"></rubedo-field></p><!--Contact-->
-					</div>
-				</div>			
-				<div ng-if="fieldEntity['infoInscription']" class="col-xs-12">
-					<div class="col-xs-12 col-sm-4 border-top-red no-padding">
-						<p class="capital text-left">{{contentDetailCtrl.getLabelByName('infoInscription')}}</p>
-					</div>
-					<div class="col-xs-12 col-sm-8 ">
-						<p><rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('infoInscription')}}"></rubedo-field></p><!--Contact-->
-						<p ng-if="page14_18">{{rubedo.translate("Block.Inscription.Formulaire.14-18", "Formulaire à renvoyer : ")}}
-						<rubedo-field  style="font-weight:bold;"  field =  "{{contentDetailCtrl.getFieldByName('formulaire_pdf')}}" ng-if="contentDetailCtrl.getFieldByName('formulaire_pdf')&& contentDetailCtrl.content.fields.formulaire_pdf &&(contentDetailCtrl.content.fields.formulaire_pdf!='')"></rubedo-field><!-- Formulaire-->
-						</p>
+	</p>
 					</div>
 				</div>
 				<div class="col-sm-12" ng-if="fieldEditMode">
 					<p>{{contentDetailCtrl.getLabelByName('publics')}} :</p>
 					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('publics')}}"></rubedo-field>
-					<p>{{contentDetailCtrl.getLabelByName('public_service')}} :</p>
-					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('public_service')}}"></rubedo-field>
 				</div>
 				
 			</div>
@@ -256,7 +142,7 @@
 		<div style="margin-top:24px"></div>
 		
 	</div>
-	<div class="row" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit && contentDetailCtrl.inscriptions">
+<!--	<div class="row" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit && contentDetailCtrl.inscriptions">
 		<div class="text-article">
 			<div class="col-xs-12">
 				<h3>{{rubedo.translate("Inscriptions.Liste", "Liste des inscriptions")}} </h3>
@@ -295,7 +181,7 @@
  
 		</div>
 		<div style="margin-top:24px"></div>
-	</div>
+	</div>-->
 	
 </div>
 
