--- a/theme/foyers/templates/blocks/contentDetail2.html
+++ b/theme/foyers/templates/blocks/contentDetail2.html
@@ -5,6 +5,6 @@
             ng-click="contentDetailCtrl.launchFullEditor()">
         <span class="glyphicon glyphicon-list-alt"></span>
     </button>    
-    <div ng-include="contentDetailCtrl.detailTemplate" ng-class="{'contentDetail':(block.code!='contact' && !blockConfig.contentOnly)}">
-    </div>
-</div>
+    <div ng-include="/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html" ng-class="{'contentDetail':(block.code!='contact' && !blockConfig.contentOnly)}">
+    </div> 
+</div> 
