--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -1,6 +1,7 @@
 <script async src="/theme/foyers/src/modules/rubedoBlocks/controllers/FormulaireController.js"></script>
 
 <div class=" content_border"  itemscope itemtype="http://schema.org/Event">
+    <p>Bonjour</p>
   <!--<meta itemprop="image" content="{{'https://www.foyersetudiants.org' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />
   <meta itemprop="name" content="{{fieldEntity['text']}}">
   <meta itemprop="startDate" content="{{contentDetailCtrl.content.fields.dateDebut *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
