--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -3,11 +3,16 @@
 <div class=" content_border"  itemscope itemtype="http://schema.org/Event">
     <p>Bonjour</p>
   <!--<meta itemprop="image" content="{{'https://www.foyersetudiants.org' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />-->
-  <meta itemprop="name" content="{{fieldEntity['text']}}">
+  <!--<meta itemprop="name" content="{{fieldEntity['text']}}">-->
 <!--  <meta itemprop="startDate" content="{{contentDetailCtrl.content.fields.dateDebut *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
   <meta ng-if="contentDetailCtrl.content.fields.dateFin" itemprop="endDate" content="{{contentDetailCtrl.content.fields.dateFin *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
 	<meta itemprop="description" content="{{contentDetailCtrl.content.fields.summary}}">-->
 
+    
+    <div field = "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="!fieldEditMode">
+					<h1 class="balance-text">{{fieldEntity['text']}}</h1>
+    </div>
+    <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
 
 	
 </div>
