--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -1,6 +1,7 @@
 <div class="container" ng-controller="FormulaireController as formCtrl">
         <div class="text-center">
-                <p class="capital">{{rubedo.translate("Block.Inscription.Fiche", "Fiche d'inscription")}}</p>
+                <!--<p class="capital">{{rubedo.translate("Block.Inscription.Fiche", "Fiche d'inscription")}}</p>-->
+                <p>Formulaire</p>
         </div>
 
 
