--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -1,7 +1,7 @@
 <script async src="/theme/foyers/src/modules/rubedoBlocks/controllers/FormulaireController.js"></script>
 
 <div class=" content_border"  itemscope itemtype="http://schema.org/Event">
-    <p>Bonjour</p>
+
   <!--<meta itemprop="image" content="{{'https://www.foyersetudiants.org' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />-->
   <!--<meta itemprop="name" content="{{fieldEntity['text']}}">-->
 <!--  <meta itemprop="startDate" content="{{contentDetailCtrl.content.fields.dateDebut *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
@@ -13,6 +13,8 @@
 					<h1 class="balance-text">{{fieldEntity['text']}}</h1>
     </div>
     <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
+    
+    <p><a ng-click="contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- Push </a></p>
 
 	
 </div>
