--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -1,15 +1,17 @@
 <div class="container" ng-controller="FormulaireController as formCtrl">
         <div class="text-center">
-                <!--<p class="capital">{{rubedo.translate("Block.Inscription.Fiche", "Fiche d'inscription")}}</p>-->
-                <p>Formulaire</p>
-                
+                <p> hourra! </p>
+                <!--<p class="capital">{{rubedo.translate("Block.Inscription.Fiche", "Fiche d'inscription")}}</p>
+                <h3>{{contentDetailCtrl.content.fields.text}}</h3>
+                <p ng-if="contentDetailCtrl.content.fields.dateDebut">{{contentDetailCtrl.content.fields.dateDebut | dateRange:contentDetailCtrl.content.fields.dateFin:'long':rubedo.translate("date.from", "od"):rubedo.translate("date.to", "do"):rubedo.current.page.locale }}<br/><!--Description-->
+                <!--{{contentDetailCtrl.content.fields.positionName}} - 
+                {{contentDetailCtrl.content.fields.position.address}}</p>-->
+
         </div>
 
 
         
         
-
-
 
 
         
