--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -15,6 +15,14 @@
     <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
     
     <p><a ng-click="contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- Push </a></p>
+    
+    <div class="container-fluid" ng-if="contentDetailCtrl.showInscription" >
+		<div ng-init="proposition = contentDetailCtrl.content" class="row padding-large" ng-include="contentDetailCtrl.inscriptionTemplate">
+		</div>
+		
+		<div style="margin-top:24px"></div>
+		
+	</div>
 
 	
 </div>
