--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -14,7 +14,30 @@
     </div>
     <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
     
-    <p><a ng-click="contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- Push </a></p>
+    
+    <div class="col-sm-12" ng-if="contentDetailCtrl.propDate!='passee'
+						&& (contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'ouverte'
+						|| contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'preinscription'
+						||  contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'attente')">
+						<!--si un seul public accueilli-->
+						<div class="col-sm-6" ng-if="(contentDetailCtrl.content.fields.publics).length==1 && contentDetailCtrl.content.fields.publics[0]">
+							<a href="#bottom">
+							<div class="button rouge cursor-as-pointer"  ng-click="contentDetailCtrl.content.public = contentDetailCtrl.content.fields.publics[0];contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription = true">
+								{{rubedo.translate("Inscription", "S'inscrire")}}
+							</div>
+							</a>
+						</div>
+						<!--si un plusieurs types de public accueillis-->
+						<div ng-if="(contentDetailCtrl.content.fields.publics).length>1" class="col-sm-6 text-center">
+							<div class="button rouge cursor-as-pointer"   style="margin-bottom:12px" >{{rubedo.translate("Block.Inscription.Inscrire.Comme","S'inscrire comme")}}:</div>
+							        <!--Type de public -->
+								<div ng-repeat="public in contentDetailCtrl.content.fields.publics track by $index" class="text-center">
+	
+									<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
+								</div>
+						</div>	
+    
+    <!--<p><a ng-click="contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- Push </a></p>-->
     
     <div class="container-fluid" ng-if="contentDetailCtrl.showInscription" >
 		<div ng-init="proposition = contentDetailCtrl.content" class="row padding-large" ng-include="contentDetailCtrl.inscriptionTemplate">
