--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -95,36 +95,9 @@
             <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
         </div>
     </div>
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue">
-        <div class="col-sm-4"><label for="facebook" class="label_style">Facebook</label></div>
-        <div class="col-sm-8"><input type="text" id="nom" ng-model="inscription.facebook" name="facebook" ></div>
-    </div>
     <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="tel1" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}**</label></div>
-        <div class="col-sm-8"><input type="text" id="tel1" name="tel1"  ng-model="inscription.tel1" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}"   ng-required="isTelephoneRequired()"></div>
-    </div>    
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="tel2" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
-        <div class="col-sm-8"><input type="text" id="tel2" name="tel2" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel2"  ng-required="isTelephoneRequired()">
-            <p ng-if="inscription.public_type != 'adolescent'" ng-class=" {'txt-red' : isTelephoneRequired()}" class="infos_validation">** {{rubedo.translate("Block.Inscription.Telephone.Condition")}}</p>
-        </div>
-    </div>
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue">
-        <div class="col-sm-4"><label for="tel2Pers2" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable.Parents")}}**</label></div>
-        <div class="col-sm-8"><input type="text" id="tel2Pers2" name="tel2Pers2" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel2Pers2"  ng-required="isTelephoneRequired()">
-            <p class="infos_validation" ng-class=" {'txt-red' : isTelephoneRequired()}">** {{rubedo.translate("Block.Inscription.Telephone.Condition.Ados")}}</p>
-        </div>
-    </div>
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue ">
-        <div class="col-sm-4"><label for="emailPers2" class="label_style">{{rubedo.translate("Block.Inscription.Email.Parent")}}*</label></div>
-        <div class="col-sm-8"><input type="email" id="emailPers2" name="emailPers2"  ng-model="inscription.emailPers2" placeholder="user@mydomain.com" required></div>
-    </div>    
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue ">
-        <div class="col-sm-4"><label for="emailPers2_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Parent.Verification")}}*</label></div>
-        <div class="col-sm-8">
-            <input type="email" id="emailPers2_verif" name="emailPers2_verif" placeholder="user@mydomain.com" ng-model="inscription.emailPers2_verif" required>
-            <p ng-if="mailError2" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
-        </div>
+        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
+        <div class="col-sm-8"><input type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel"  ng-required="isTelephoneRequired()"></div>
     </div>
 
