--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -15,9 +15,7 @@
     <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
     
     
-    <div  ng-if="contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'ouverte'
-						|| contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'preinscription'
-						||  contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'attente' ">
+    <div>
 						<!--si un seul public accueilli-->
 						<div  ng-if="(contentDetailCtrl.content.fields.publics).length==1 && contentDetailCtrl.content.fields.publics[0]">
 							<a href="#bottom">
