--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -20,11 +20,9 @@
 						||  contentDetailCtrl.content.fields.inscriptionState.inscriptionState == 'attente' ">
 						<!--si un seul public accueilli-->
 						<div  ng-if="(contentDetailCtrl.content.fields.publics).length==1 && contentDetailCtrl.content.fields.publics[0]">
-							<a href="#bottom">
 							<div ng-click="contentDetailCtrl.content.public = contentDetailCtrl.content.fields.publics[0];contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription = true">
 								{{rubedo.translate("Inscription", "S'inscrire")}}
 							</div>
-							</a>
 						</div>
 						<!--si un plusieurs types de public accueillis-->
 						<div ng-if="(contentDetailCtrl.content.fields.publics).length>1" >
@@ -32,7 +30,7 @@
 							        <!--Type de public -->
 								<div ng-repeat="public in contentDetailCtrl.content.fields.publics track by $index" >
 	
-									<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
+									<p><a ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
 								</div>
 						</div>
     </div>
