--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -512,11 +512,47 @@ header.bg-image{
 
 
 /* FORMULAIRE D'INSCRIPTION */
+////////////////////////////////////////////////////
+    ///////////FORMS///////////////////
+///////////////////////////////////////////////////
+/*General*/
+input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
+  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
+}
+input[type=text].ng-dirty.ng-invalid,input[type=number].ng-dirty.ng-invalid,  textarea.ng-dirty.ng-invalid,input[type=email].ng-dirty.ng-invalid{border:3px solid @rouge}
+input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:3px solid white}
+.bg-white {
+  input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:2px solid @marron}
+  input[type=text]{border-color:@marron}
+}
+
+
+input[type=text].number{text-align: center; font-size: 20px; font-weight: bold;width:100px}
+input:-webkit-autofill, textarea#adresse:-webkit-autofill, select:-webkit-autofill{background-color: @beigeCCN !important; color:@txt_dark !important}
+input:-webkit-autofill {
+    -webkit-box-shadow:0 0 0 50px @beigeCCN inset; /* Change the color to your own background color */
+    -webkit-text-fill-color: @txt_dark;
+}
+input:-moz-placeholder,
+input:focus {
+    box-shadow:none !important;
+}
+
+input[type=checkbox]:disabled + label,input[type=radio]:disabled + label{color:@marron}
+textarea:focus{outline:none}
+input[type=text]:focus:not(.ng-invalid), textarea:focus, input[type=email]:focus, input[type=number]:focus{border-color:@bleu !important; border-width: 2px}
+
+.chosen-container .chosen-results li.highlighted{background-color:@bleu}
+.btn-primary{background-color:@rouge; border:none}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary{background-color: @rouge_shadow}
+
+h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-top:12px; margin-bottom:24px}
 .capital, .capital p{text-transform: uppercase; letter-spacing: 2px; font-size:14px; font-weight: normal; }
 label.label_style, .label_style label:not(.radio-inline){
   float: right;
   line-height: 1.5em;
-  .txt-red;
+  color: white;
+		font-weight:bold;
   .capital;
   text-align: right;
   position: relative;
