--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -516,139 +516,139 @@ header.bg-image{
     ///////////FORMS///////////////////
 ///////////////////////////////////////////////////
 /*General*/
-input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
-  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
-}
-input[type=text].ng-dirty.ng-invalid,input[type=number].ng-dirty.ng-invalid,  textarea.ng-dirty.ng-invalid,input[type=email].ng-dirty.ng-invalid{border:3px solid @rouge}
-input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:3px solid white}
-.bg-white {
-  input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:2px solid @marron}
-  input[type=text]{border-color:@marron}
-}
-
-
-input[type=text].number{text-align: center; font-size: 20px; font-weight: bold;width:100px}
-input:-webkit-autofill, textarea#adresse:-webkit-autofill, select:-webkit-autofill{background-color: @beigeCCN !important; color:@txt_dark !important}
-input:-webkit-autofill {
-    -webkit-box-shadow:0 0 0 50px @beigeCCN inset; /* Change the color to your own background color */
-    -webkit-text-fill-color: @txt_dark;
-}
-input:-moz-placeholder,
-input:focus {
-    box-shadow:none !important;
-}
-
-input[type=checkbox]:disabled + label,input[type=radio]:disabled + label{color:@marron}
-textarea:focus{outline:none}
-input[type=text]:focus:not(.ng-invalid), textarea:focus, input[type=email]:focus, input[type=number]:focus{border-color:@bleu !important; border-width: 2px}
-
-.chosen-container .chosen-results li.highlighted{background-color:@bleu}
-.btn-primary{background-color:@rouge; border:none}
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary{background-color: @rouge_shadow}
-
-h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-top:12px; margin-bottom:24px}
-.capital, .capital p{text-transform: uppercase; letter-spacing: 2px; font-size:14px; font-weight: normal; }
-label.label_style, .label_style label:not(.radio-inline){
-  float: right;
-  line-height: 1.5em;
-  color: white;
-		font-weight:bold;
-  .capital;
-  text-align: right;
-  position: relative;
-  top:0.5em;
-}
-label.label_style.left, .label_style.left label{text-align:left; float:left}
-@media screen and (max-width:768px) {label.label_style{text-align:left; float:left}}
-
-
-/*Checkboxes and radio buttons*/
-
-.sans-serif{font-family: 'trend_sansone',Helvetica,Arial,sans-serif}
-  label.sexe_label{.sans-serif;}
-
-  input[type=radio],
-  input[type=checkbox] {
-	  display: none;
-  }
-  .radio-inline input[type=radio], .form-group input[type=radio],
-  .checkbox-inline input[type=checkbox],.form-group input[type=checkbox] {
-	  display: block;
-  }
-  input[type=radio]+ label:not(.sexe_label):before, input[type=checkbox]+ label:before {
-	content: "";
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	margin-right: 10px;
-	position: absolute;
-	left: 0;
-	vertical-align: middle;
-	background-color: white;
-	border: 1px solid brown;
-  }
-
-  input[type=radio] +label:not(.sexe_label):before {
-	 border-radius: 10px;
- }
-  input[type=checkbox] + label {
-	  margin-bottom: 10px;
-  }
-  input[type=checkbox] + label:before {
-      border-radius: 3px;
-  }
-
-  input[type=radio]:checked + label:not(.sexe_label):after {
-      content: "\2022";
-      color: red;
-      font-size: 44px;
-      text-align: center;
-      line-height: 28px;
-      position:absolute;
-      left:1px; top: -5px;
-  }
-  input[type=radio]+ label:not(.sexe_label), input[type=checkbox]+ label {
-	display: inline-block;
-	cursor: pointer;
-	position: relative;
-	padding-left: 25px;
-	margin-right: 15px;
-	font-weight: normal;
-  }
-
-  input[type=checkbox]:checked + label:before {
-	  content: "\f00c"; font-family: 'trend_sansone';
-	  text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
-	  font-size: 20px;
-	  text-align: center;
-	line-height: 19px;
-	color:red;
-  }
-  select{
-    border: 2px solid white;
-    background-color: transparent;
-    width: 100%; padding: 6px;
-  }
-
-.txt-red{color:@rouge !important}
-
-ng-form[name="inscription_form"]{
-  .panel{background-color: transparent; border: none;-webkit-box-shadow: none; box-shadow:none}
-  h2.displayed{background-color: white}
-  //h2.displayed + ng-form .row{max-height:300px; transition: max-height 0.8s ease-out; margin-bottom:12px; overflow: visible;}
-  ng-form .row{margin: 0 15px;margin-bottom:12px; }
-  //ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
-  .capital.txt-red{font-size:16px !important}
-
-  label.sexe_label, input.montant-dons{
-    background-color:transparent;
-    height: 36px; width:36px;
-    color:brown;
-    border: 2px white solid;
-    border-radius: 18px;
-    line-height: 32px;
-    .sans-serif;
-    text-align: center;
-    cursor: pointer;
-    margin-right:25px;
-  }}
+//input[type=text], input[type=number],textarea, input[type=email], input[type=text].form-control, input[type=number].form-control,textarea.form-control, input[type=email].form-control {
+//  width:100%; border:3px solid white; background-color: transparent !important; font-family: 'trend_sansone'; font-size: 18px; padding:4px 12px;
+//}
+//input[type=text].ng-dirty.ng-invalid,input[type=number].ng-dirty.ng-invalid,  textarea.ng-dirty.ng-invalid,input[type=email].ng-dirty.ng-invalid{border:3px solid @rouge}
+//input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:3px solid white}
+//.bg-white {
+//  input[type=text].ng-invalid:not(.ng-dirty),input[type=number].ng-invalid:not(.ng-dirty),  textarea.ng-invalid:not(.ng-dirty),input[type=email].ng-invalid:not(.ng-dirty){border:2px solid @marron}
+//  input[type=text]{border-color:@marron}
+//}
+//
+//
+//input[type=text].number{text-align: center; font-size: 20px; font-weight: bold;width:100px}
+//input:-webkit-autofill, textarea#adresse:-webkit-autofill, select:-webkit-autofill{background-color: @beigeCCN !important; color:@txt_dark !important}
+//input:-webkit-autofill {
+//    -webkit-box-shadow:0 0 0 50px @beigeCCN inset; /* Change the color to your own background color */
+//    -webkit-text-fill-color: @txt_dark;
+//}
+//input:-moz-placeholder,
+//input:focus {
+//    box-shadow:none !important;
+//}
+//
+//input[type=checkbox]:disabled + label,input[type=radio]:disabled + label{color:@marron}
+//textarea:focus{outline:none}
+//input[type=text]:focus:not(.ng-invalid), textarea:focus, input[type=email]:focus, input[type=number]:focus{border-color:@bleu !important; border-width: 2px}
+//
+//.chosen-container .chosen-results li.highlighted{background-color:@bleu}
+//.btn-primary{background-color:@rouge; border:none}
+//.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary{background-color: @rouge_shadow}
+//
+//h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-top:12px; margin-bottom:24px}
+//.capital, .capital p{text-transform: uppercase; letter-spacing: 2px; font-size:14px; font-weight: normal; }
+//label.label_style, .label_style label:not(.radio-inline){
+//  float: right;
+//  line-height: 1.5em;
+//  color: white;
+//		font-weight:bold;
+//  .capital;
+//  text-align: right;
+//  position: relative;
+//  top:0.5em;
+//}
+//label.label_style.left, .label_style.left label{text-align:left; float:left}
+//@media screen and (max-width:768px) {label.label_style{text-align:left; float:left}}
+//
+//
+///*Checkboxes and radio buttons*/
+//
+//.sans-serif{font-family: 'trend_sansone',Helvetica,Arial,sans-serif}
+//  label.sexe_label{.sans-serif;}
+//
+//  input[type=radio],
+//  input[type=checkbox] {
+//	  display: none;
+//  }
+//  .radio-inline input[type=radio], .form-group input[type=radio],
+//  .checkbox-inline input[type=checkbox],.form-group input[type=checkbox] {
+//	  display: block;
+//  }
+//  input[type=radio]+ label:not(.sexe_label):before, input[type=checkbox]+ label:before {
+//	content: "";
+//	display: inline-block;
+//	width: 20px;
+//	height: 20px;
+//	margin-right: 10px;
+//	position: absolute;
+//	left: 0;
+//	vertical-align: middle;
+//	background-color: white;
+//	border: 1px solid brown;
+//  }
+//
+//  input[type=radio] +label:not(.sexe_label):before {
+//	 border-radius: 10px;
+// }
+//  input[type=checkbox] + label {
+//	  margin-bottom: 10px;
+//  }
+//  input[type=checkbox] + label:before {
+//      border-radius: 3px;
+//  }
+//
+//  input[type=radio]:checked + label:not(.sexe_label):after {
+//      content: "\2022";
+//      color: red;
+//      font-size: 44px;
+//      text-align: center;
+//      line-height: 28px;
+//      position:absolute;
+//      left:1px; top: -5px;
+//  }
+//  input[type=radio]+ label:not(.sexe_label), input[type=checkbox]+ label {
+//	display: inline-block;
+//	cursor: pointer;
+//	position: relative;
+//	padding-left: 25px;
+//	margin-right: 15px;
+//	font-weight: normal;
+//  }
+//
+//  input[type=checkbox]:checked + label:before {
+//	  content: "\f00c"; font-family: 'trend_sansone';
+//	  text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+//	  font-size: 20px;
+//	  text-align: center;
+//	line-height: 19px;
+//	color:red;
+//  }
+//  select{
+//    border: 2px solid white;
+//    background-color: transparent;
+//    width: 100%; padding: 6px;
+//  }
+//
+//.txt-red{color:@rouge !important}
+//
+//ng-form[name="inscription_form"]{
+//  .panel{background-color: transparent; border: none;-webkit-box-shadow: none; box-shadow:none}
+//  h2.displayed{background-color: white}
+//  //h2.displayed + ng-form .row{max-height:300px; transition: max-height 0.8s ease-out; margin-bottom:12px; overflow: visible;}
+//  ng-form .row{margin: 0 15px;margin-bottom:12px; }
+//  //ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
+//  .capital.txt-red{font-size:16px !important}
+//
+//  label.sexe_label, input.montant-dons{
+//    background-color:transparent;
+//    height: 36px; width:36px;
+//    color:brown;
+//    border: 2px white solid;
+//    border-radius: 18px;
+//    line-height: 32px;
+//    .sans-serif;
+//    text-align: center;
+//    cursor: pointer;
+//    margin-right:25px;
+//  }}
