--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -1,14 +1,14 @@
     <!--NOM-->
     <div class="row">
-        <div class="col-sm-4"><label for="nom" class="form-control">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
-        <div class="col-sm-8"><input type="text" id="nom" ng-model="inscription.nom" name="name" required></div>
+        <div class="col-sm-4"><label for="nom" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="nom" ng-model="inscription.nom" name="name" required></div>
     </div>
     <div class="row">
-        <div class="col-sm-4"><label for="prenom" class="form-control">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
-        <div class="col-sm-8"><input type="text" id="prenom" ng-model="inscription.surname" name="surname" required></div>
+        <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
+        <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="inscription.surname" name="surname" required></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="dateNaiss" class="form-control">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
+        <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
         <div class="col-sm-8">
             <div class="dropdown">
                 <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
@@ -22,11 +22,11 @@
         </div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="villeNaiss" class="form-control">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
-        <div class="col-sm-8"><input type="text" id="villeNaiss" ng-model="inscription.birthplace" name="birthplace" required></div>
+        <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="inscription.birthplace" name="birthplace" required></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="sexe" class="form-control">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
+        <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
         <div class="col-sm-8">
             <input type="radio"  name="sexe" id="H" value="H" ng-model="inscription.sexe.sexe" required>
                         <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
@@ -35,33 +35,33 @@
         </div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="nationalite" class="form-control">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
-        <div class="col-sm-8"><input type="text" id="nationalite" ng-model="inscription.nationality" name="nationality"></div>
+        <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="inscription.nationality" name="nationality"></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="adresse" class="form-control">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
-        <div class="col-sm-8"><textarea rows="3" id="adresse" ng-model="inscription.address" name="address" placeholder="" required></textarea></div>
+        <div class="col-sm-4"><label for="adresse" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
+        <div class="col-sm-8"><textarea class="form-control" rows="3" id="adresse" ng-model="inscription.address" name="address" placeholder="" required></textarea></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="cp" class="form-control">{{rubedo.translate("Block.Inscription.CodePostal")}}</label></div>
-        <div class="col-sm-8"><input type="text" id="cp" ng-model="inscription.cp" name="cp"></div>
+        <div class="col-sm-4"><label for="cp" class="label_style">{{rubedo.translate("Block.Inscription.CodePostal")}}</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="cp" ng-model="inscription.cp" name="cp"></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="city" class="form-control">{{rubedo.translate("Block.Inscription.Ville")}}*</label></div>
-        <div class="col-sm-8"><input type="text" id="city" ng-model="inscription.city" name="city" required></div>
+        <div class="col-sm-4"><label for="city" class="label_style">{{rubedo.translate("Block.Inscription.Ville")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="city" ng-model="inscription.city" name="city" required></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="pays" class="form-control">{{rubedo.translate("Block.Inscription.Pays")}}</label></div>
-        <div class="col-sm-8"><input type="text" id="pays" ng-model="inscription.country" name="country"></div>
+        <div class="col-sm-4"><label for="pays" class="label_style">{{rubedo.translate("Block.Inscription.Pays")}}</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="pays" ng-model="inscription.country" name="country"></div>
     </div>
     <!--Si ados, demander classe-->
     <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue">
-        <div class="col-sm-4"><label for="classeEtudes" class="form-control">{{rubedo.translate("Block.Inscription.Classe")}} *</label></div>
-        <div class="col-sm-8"><input type="text" id="classeEtudes" ng-model="inscription.classeEtudes" name="classeEtudes" required></div>
+        <div class="col-sm-4"><label for="classeEtudes" class="label_style">{{rubedo.translate("Block.Inscription.Classe")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="classeEtudes" ng-model="inscription.classeEtudes" name="classeEtudes" required></div>
     </div>
     <!--Si jeunes, deemander situation-->
    <div class="row" ng-if="inscription.public_type == 'jeune-adulte' && !personneConnue">
-        <div class="col-sm-4"><label for="classe" class="form-control">{{rubedo.translate("Block.Inscription.Situation")}}</label></div>
+        <div class="col-sm-4"><label for="classe" class="label_style">{{rubedo.translate("Block.Inscription.Situation")}}</label></div>
         <div class="col-sm-8">
             <div class="col-xs-12">
                 <input type="radio"  name="situation" id="etudiant" value="{{rubedo.translate('Block.Inscription.Situation.Etudiant')}}" ng-model="inscription.situation">
@@ -80,18 +80,18 @@
     </div>
     <!--Si adulte, demander profession-->
     <div class="row" ng-if="inscription.public_type == 'adulte' && !personneConnue">
-        <div class="col-sm-4"><label for="profession" class="form-control">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
-        <div class="col-sm-8"><input type="text" id="profession" ng-model="inscription.profession" name="profession" required></div>
+        <div class="col-sm-4"><label for="profession" class="label_style">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="profession" ng-model="inscription.profession" name="profession" required></div>
     </div>
 
     <div class="row">
-        <div class="col-sm-4"><label for="email" class="form-control">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
-        <div class="col-sm-8"><input type="email" id="email" name="email"  ng-model="inscription.email" placeholder="user@mydomain.com" required></div>
+        <div class="col-sm-4"><label for="email" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="email" id="email" name="email"  ng-model="inscription.email" placeholder="user@mydomain.com" required></div>
     </div>    
     <div class="row">
-        <div class="col-sm-4"><label for="email_verif" class="form-control">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
+        <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
         <div class="col-sm-8">
-            <input type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.email_verif" required>
+            <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.email_verif" required>
             <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
         </div>
     </div>
