--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -14,7 +14,7 @@
                             <ng-form name="infos_personnelles">
                                     <div  class="row" ng-include="formCtrl.general_infos"></div>
                                     <div class="row text-center">
-                                        <div class="button submit" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <div class="button" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                     </div>
                             </ng-form>
