--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -347,7 +347,7 @@ input, textarea {
 		width: 29%;
 		border: 2px solid #fff;
 }
-.button{&:hover{background: white; color:@bg}}
+.button:hover{background: white; color:@bg}
 button{border: 2px solid white; &:hover{background: white; color:@bg}}
 //menu
 .navbar.navbar-default{
