--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -539,7 +539,7 @@ ng-form[name=inscription_form] input[type=radio]:checked+label.sexe_label, ng-fo
     line-height: 36px;
 }
 ng-form[name=inscription_form] h2 {
-				color:white !important;
+				color:white;
 }
 ng-form[name=inscription_form] label.sexe_label {
     background-color: transparent;
