--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -579,7 +579,7 @@ ng-form[name=inscription_form] label.sexe_label {
 	  display: block;
   }
 	
-	  .button.submit{border: 2px solid @rouge; color:@rouge;}
+	  .button.submit{color:@bg;background-color:white;}
   .button.submit.disabled{color:@marron; border: 2px solid @marron; cursor: default}
 /*Titre section*/
 h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-top:12px; margin-bottom:24px}
