--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -136,7 +136,7 @@
         
         
         
-        <div class="col-xs-12" ng-if="!personneConnue && parentsEnsemble'">
+        <div class="col-xs-12" ng-if="!personneConnue && parentsEnsemble">
             <h3 class="row">{{rubedo.translate("Block.Inscription.Couple", "Couple")}}</h3>
         
             <div class="row">
