--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -8,6 +8,15 @@
         <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="inscription.surname" name="surname" required></div>
     </div>
     <div class="row" ng-if="!personneConnue">
+        <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
+        <div class="col-sm-8">
+            <input type="radio"  name="sexe" id="H" value="H" ng-model="inscription.sexe.sexe" required>
+                        <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
+            <input type="radio"  name="sexe" id="F" value="F" ng-model="inscription.sexe.sexe">
+                        <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
+        </div>
+    </div>
+    <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
         <div class="col-sm-8">
             <div class="dropdown">
@@ -23,67 +32,19 @@
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="inscription.birthplace" name="birthplace" required></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="inscription.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
     </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
-        <div class="col-sm-8">
-            <input type="radio"  name="sexe" id="H" value="H" ng-model="inscription.sexe.sexe" required>
-                        <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
-            <input type="radio"  name="sexe" id="F" value="F" ng-model="inscription.sexe.sexe">
-                        <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
-        </div>
-    </div>
+    
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
         <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="inscription.nationality" name="nationality"></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="adresse" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
-        <div class="col-sm-8"><textarea class="form-control" rows="3" id="adresse" ng-model="inscription.address" name="address" placeholder="" required></textarea></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="cp" class="label_style">{{rubedo.translate("Block.Inscription.CodePostal")}}</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="cp" ng-model="inscription.cp" name="cp"></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="city" class="label_style">{{rubedo.translate("Block.Inscription.Ville")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="city" ng-model="inscription.city" name="city" required></div>
-    </div>
-    <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="pays" class="label_style">{{rubedo.translate("Block.Inscription.Pays")}}</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="pays" ng-model="inscription.country" name="country"></div>
-    </div>
-    <!--Si ados, demander classe-->
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue">
-        <div class="col-sm-4"><label for="classeEtudes" class="label_style">{{rubedo.translate("Block.Inscription.Classe")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="classeEtudes" ng-model="inscription.classeEtudes" name="classeEtudes" required></div>
-    </div>
-    <!--Si jeunes, deemander situation-->
-   <div class="row" ng-if="inscription.public_type == 'jeune-adulte' && !personneConnue">
-        <div class="col-sm-4"><label for="classe" class="label_style">{{rubedo.translate("Block.Inscription.Situation")}}</label></div>
-        <div class="col-sm-8">
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="etudiant" value="{{rubedo.translate('Block.Inscription.Situation.Etudiant')}}" ng-model="inscription.situation">
-                        <label for="etudiant">{{rubedo.translate('Block.Inscription.Situation.Etudiant')}}</label>
-            </div>
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="jeunePro" value="{{rubedo.translate('Block.Inscription.Situation.JPro')}}" ng-model="inscription.situation">
-                        <label for="jeunePro">{{rubedo.translate('Block.Inscription.Situation.JPro')}}</label>
-            </div>
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="situationAutre" value="{{rubedo.translate('Block.Inscription.Situation.Autre')}}" ng-model="inscription.situation">
-                        <label for="situationAutre">{{rubedo.translate("Block.Inscription.Situation.Autre")}}</label>
-                        <input type="text" name="autreSituation" id="autreSituation" ng-model="inscription.autreSituation" class="complement_text" />
-            </div>
+        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
+        <div class="col-sm-8"><input type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel"  required>
         </div>
     </div>
-    <!--Si adulte, demander profession-->
-    <div class="row" ng-if="inscription.public_type == 'adulte' && !personneConnue">
-        <div class="col-sm-4"><label for="profession" class="label_style">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="profession" ng-model="inscription.profession" name="profession" required></div>
-    </div>
-
+    
     <div class="row">
         <div class="col-sm-4"><label for="email" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
         <div class="col-sm-8"><input class="form-control" type="email" id="email" name="email"  ng-model="inscription.email" placeholder="user@mydomain.com" required></div>
@@ -95,6 +56,10 @@
             <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
         </div>
     </div>
+    
+    
+
+    
     <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
     <!--<div class="row" ng-if="!personneConnue"> 
         <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
