--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -1,6 +1,6 @@
 <script async src="/theme/foyers/src/modules/rubedoBlocks/controllers/FormulaireController.js"></script>
 
-<div class=" content_border"  itemscope itemtype="http://schema.org/Event">
+<div class="text-center content_border"  itemscope itemtype="http://schema.org/Event">
 
   <!--<meta itemprop="image" content="{{'https://www.foyersetudiants.org' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />-->
   <!--<meta itemprop="name" content="{{fieldEntity['text']}}">-->
