--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -41,7 +41,7 @@
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
-        <div class="col-sm-8"><input type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel"  required>
+        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel"  required>
         </div>
     </div>
     
